add_executable(test1 test1.cc)
target_link_libraries(test1 mymuduo)

add_executable(test2 test2.cc)
target_link_libraries(test2 mymuduo)

add_executable(test3 test3.cc)
target_link_libraries(test3 mymuduo)

add_executable(test4 test4.cc)
target_link_libraries(test4 mymuduo)

add_executable(test5 test5.cc)
target_link_libraries(test5 mymuduo)

add_executable(test6 test6.cc)
target_link_libraries(test6 mymuduo)

add_executable(test7 test7.cc)
target_link_libraries(test7 mymuduo)