add_executable(net_test1 test1.cc)
target_link_libraries(net_test1 mymuduo)

add_executable(net_test2 test2.cc)
target_link_libraries(net_test2 mymuduo)

add_executable(net_test3 test3.cc)
target_link_libraries(net_test3 mymuduo)

add_executable(net_test4 test4.cc)
target_link_libraries(net_test4 mymuduo)

add_executable(net_test5 test5.cc)
target_link_libraries(net_test5 mymuduo)

add_executable(net_test6 test6.cc)
target_link_libraries(net_test6 mymuduo)

add_executable(net_test7 test7.cc)
target_link_libraries(net_test7 mymuduo)

add_executable(net_test8 test8.cc)
target_link_libraries(net_test8 mymuduo)

add_executable(net_test9 test9.cc)
target_link_libraries(net_test9 mymuduo)

add_executable(net_test10 test10.cc)
target_link_libraries(net_test10 mymuduo)

add_executable(net_test11 test11.cc)
target_link_libraries(net_test11 mymuduo)

add_executable(net_test12 test12.cc)
target_link_libraries(net_test12 mymuduo)

add_executable(net_test13 test13.cc)
target_link_libraries(net_test13 mymuduo)